# akame

./: .gitignore  CONTRIBUTING.md  README.md
aux/: README.md
aux/programs/: README.md
aux/programs/AStar/: AStar.cpp  AStar.h  Node.cpp  Node.h  PathAlgorithm.h  PathFinder.h  psuedocode_geek  psuedocode_wiki.txt
aux/programs/roboclaw_actuator/: roboclaw.hpp  roboclaw_test.cpp
aux/scripts/: README.md  ros2-install.sh
central_controller/central_controller/: CMakeLists.txt  package.xml
doc/: README.md  index.md  kurome_overview_defects.md  ros2_version_decision.md  running_go_motors_via_ros_with_controller.md
doc/nodes/: README.md  central_controller.md  diff_drive.md  graph_slam_node.md  map_odom_broadcaster.md  mapping_nodes_overview.md  navigation_node.md  path_follower.md  path_generator.md  pointcloud_to_laserscan_node.md  sensor-node-list.md
src/: README.md  fake_path_follower.py  fake_scan_publisher.py
src/central_controller/: CMakeLists.txt  README.md  package.xml  setup.py
src/central_controller/central_controller/: __init__.py  central_controller_node.cpp  central_controller_node.py
src/central_controller/resource/: central_controller
src/parameters/: 320_240_HV0121115C0094  320_240_HV0130210C0424  640_480_HV0130210C0424
src/py_pubsub/: package.xml  setup.py
src/src/altair/: CMakeLists.txt  package.xml
src/src/altair/src/: altair.cpp  band.hpp  common.h  nearest.hpp
src/src/deneb/: CMakeLists.txt  package.xml
src/src/deneb/src/: deneb.cpp
src/src/drum_driver/: CMakeLists.txt  package.xml
src/src/drum_driver/include/serialPort/: SerialPort.h
src/src/drum_driver/src/: main.cpp
src/src/ekf/: package.xml
src/src/ekf/src/: ekf_math.cpp  ekf_math.h
src/src/f710/: 90-hidraw-permissions.rules  CMakeLists.txt  README.md  package.xml  setup.sh
src/src/f710/src/: f710.cpp  f710.h  main.cpp
src/src/go_m8010_6/: CMakeLists.txt  package.xml  setup.sh
src/src/go_m8010_6/include/IOPort/: IOPort.h
src/src/go_m8010_6/src/: main.cpp
src/src/pc_flatten/: CMakeLists.txt  package.xml
src/src/pc_flatten/src/: main.cpp
src/src/pc_to_ls/: CMakeLists.txt  package.xml
src/src/pc_to_ls/src/: pc_to_ls.cpp
src/src/roboclaw_driver/: CMakeLists.txt  package.xml
src/src/roboclaw_driver/src/: main.cpp  roboclaw.hpp
src/src/sim_env/: CMakeLists.txt  package.xml
src/src/sim_env/config/: bridge_config.yaml
src/src/sim_env/launch/: display.launch.py
src/src/sim_env/rviz/: config.rviz
src/src/sim_env/src/: rewrite.cpp
src/src/sim_env/src/description/: test_bot.urdf
src/src/simple_map/: CMakeLists.txt  package.xml
src/src/simple_map/src/: map.hpp  points.hpp  simple_map.cpp
src/src/synexens/include/: SYDataDefine.h
src/src/synexens/src/: synexens_node.cpp
src/src/test_env/: CMakeLists.txt  package.xml
src/src/test_env/config/: bridge_config.yaml
src/src/test_env/launch/: demo.launch.py  display.launch.py  vega_test.launch.py
src/src/test_env/rviz/: config.rviz
src/src/test_env/src/: rewrite.cpp
src/src/test_env/src/description/: test_bot.sdf
src/src/test_env/world/: maze.sdf  my_world.sdf
src/src/tf_tune/: CMakeLists.txt  package.xml
src/src/tf_tune/src/: main.cpp
src/src/vega/: CMakeLists.txt  package.xml
src/src/vega/src/: astar.hpp  map.hpp  vega.cpp
src/src/waveshare_demo/: CMakeLists.txt  package.xml
src/src/waveshare_demo/launch/: demo.launch.py
src/src/waveshare_driver/: CMakeLists.txt  package.xml
src/src/waveshare_driver/src/: main.cpp
src/src/waveshare_urdf/: CMakeLists.txt  package.xml
src/src/waveshare_urdf/launch/: transform.launch.py
src/src/waveshare_urdf/src/: waveshare.urdf
