<?xml version="1.0"?>
<package format="3">
  <name>central_controller</name>
  <version>0.1.0</version>
  <description>controller node for navigation and regolith operations.</description>
  <maintainer email="lexwatts@u.boisestate.edu">Lex Watts</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
