<?xml version="1.0"?>
<package format="3">
  <name>central_controller</name>
  <version>0.0.0</version>
  <description>Central controller node for bender</description>

  <maintainer email="lexwatts@u.boisestate.edu">Lex Watts</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

