<?xml version="1.0"?>
<package format="3">
  <name>central_controller</name>
  <version>0.1.0</version>
  <description>Central controller node for bender</description>

  <maintainer email="lexwatts@u.boisestate.edu">Lex Watts</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>

